--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
-    "telegraf": "^4.3.0"
+    "telegraf": "^4.3.0",
+    "xmldom": "^0.6.0",
+    "fast-xml-parser": "^3.19.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
