--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@nestjs/core": "^7.5.1",
     "@nestjs/schedule": "^0.4.3",
     "cheerio": "^1.0.0-rc.9",
+    "fast-xml-parser": "^3.19.0",
+    "forever": "^3.0.4",
     "got": "^11.8.2",
     "lodash": "^4.17.21",
     "nestjs-telegraf": "^2.2.2",
@@ -34,8 +36,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
     "telegraf": "^4.3.0",
-    "xmldom": "^0.6.0",
-    "fast-xml-parser": "^3.19.0"
+    "xmldom": "^0.6.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
